feat: first docker setup